# grpc-ocaml

./: .env  .envrc  README.md  dune  dune-project  grpc.opam  shell.nix
.github/workflows/: ci.yml
basic/: const.ml  dune  error.ml  grpc_basic.ml  headers.ml  log.ml  utils.ml
client/: client.ml  dune  grpc_client.ml  log.ml  parse.ml  pool.ml  post.ml
client/test/: dune  index.js  package.json  test.ml
core/: args.ml  byte_buffer.ml  call.ml  channel.ml  completion_queue.ml  compression.ml  context.ml  dune  event.ml  import.ml  log.ml  metadata.ml  op.ml  play_client.ml  play_server.ml  playground.ml  propagation_bits.ml  protoiso.ml  server.ml  slice.ml  status.ml  timespec.ml  top.ml
example/: client.ml  dune  server.ml  settings.ml
example/client/: dune  main.ml
example/server/: dune  main.ml
example/server/context/: context.ml  dune
example/server/handler/: dune  handler.ml
example/server/interceptors/: dune  interceptors.ml
example/server/middlewares/: dune  middlewares.ml
ffi/: byte_buffer.ml  ct_helper.ml  dune  ffi.ml  function_description.ml  playground.ml  type_description.ml
misc/: dune  proto.proto
nix/: default.nix  ghz.nix  ocamlPackages.nix  opam-selection.nix  sources.json
nix/opam/: core_unix.opam
server/: base.ml  context.ml  dune  error.ml  grpc_server.ml  handler.ml  log.ml  middlewares.ml  rpc.ml  server.ml
server/test/: dune  test.ml
stub/: dune  function_description.ml  grpc_stub.ml  headers.h  playground.ml  stub.ml  test.ml  type_description.ml
test/: dune  proto.proto  test.ml
