opam-version: "2.0"
version: "0.0.0"
depends: [
  "dune" {< "3.2"}
  "ocaml"
  "core"
  "ctypes"
  "ctypes-foreign"
  "core_unix"
  "lwt"
  "hmap"
  "logs"
  "uri"
  "h2-lwt-unix"
  "ocaml-protoc-plugin"
  "conf-protoc" { with-test }
  "lwt_ssl"
  "lwt_ppx"
  "ppx_deriving"
  "ppx_yojson_conv"
  "ppx_let"
  "ppx_inline_test" { with-test }
  "alcotest" { with-test }
]

depexts: [
  ["grpc"] { os-distribution = "nix" }
  ["libgrpc-dev"] { os-family = "debian" }
]

build: ["dune" "build" "--profile" "release" "-j" jobs "-p" name]

