opam-version: "2.0"
version: "0.0.0"
synopsis: "gRPC for OCaml"
maintainer: "Satoru Kawahara <s1311350@gmail.com>"
authors: ["Satoru Kawahara <s1311350@gmail.com>"]
license: "MIT"
homepage: "https://github.com/Nymphium/grpc-ocaml"
bug-reports: "https://github.com/Nymphium/grpc-ocaml/issues"
dev-repo: "git+https://github.com/Nymphium/grpc-ocaml.git"
depends: [
  "ocaml" {>= "4.13" & < "5.0"}
  "dune" {>= "3.0"}
  "core"
  "core_unix"
  "lwt"
  "hmap"
  "logs"
  "uri"
  "h2-lwt-unix"
  "ocaml-protoc-plugin"
  "conf-protoc" { with-test }
  "lwt_ssl"
  "lwt_ppx"
  "ppx_deriving"
  "ppx_yojson_conv"
  "ppx_let"
  "ppx_inline_test" { with-test }
  "alcotest" { with-test }
]

build: ["dune" "build" "-j" jobs "-p" name]

