(library
 (name ffi)
 (public_name grpc.ffi)
 (libraries core ctypes lwt.unix )
 (modules :standard \ test playground)
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name grpc)
  (headers
   (include "grpc/grpc.h" "grpc/census.h" "grpc/grpc_security.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency lwt_preemptive)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(executable
  (name playground)
  (modules playground)
  (libraries ffi inspect ctypes))

(test
  (name test)
  (modules test)
  (libraries ffi ctypes alcotest))
