(library
 (name grpc_stub)
 (public_name grpc.stub)
 (libraries ctypes ctypes.foreign)
 (preprocess
  (pps ppx_deriving.std))
 (modules :standard \ test)
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name grpc)
  (headers
   (preamble %{read:headers.h}))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(test
 (name test)
 (modules test)
 (libraries grpc.stub ctypes alcotest))
